syntax = "proto3";

import "google/protobuf/empty.proto";
import "kv.proto";

package externalexecutor.protobuf;

option optimize_for = LITE_RUNTIME;

// Service exposed by a CCF node for Executors/Indexers to interact with the
// Index stored on the CCF node. Communication with this service must be over
// TLS, authorising as a client cert that has previously been accepted by the
// ExecutorRegistration service.
service Index
{
  // Installs index and registers with the given strategy name and map name.
  // Streams Key-Value pairs in every transaction.
  // When Indexer is disconnected, it is able to reconnect and continue
  // streaming
  rpc InstallMapAndSubscribe(IndexInstall) returns (stream IndexWork) {}

  // Stores Indexer's data. Can only be invoked by the Indexer that installed
  // the strategy
  rpc StoreIndexedData(IndexKeyValue) returns (google.protobuf.Empty) {}

  // Takes an input of Index Strategy name and a Key, returns values from the
  // indexed data on the local CCF node This can be invoked by any registered
  // executor
  rpc GetIndexedData(IndexKey) returns (IndexKeyValue) {}
}

message IndexKeyValue
{
  bytes key = 2;
  bytes value = 3;
}

message Subscribed {}
message Published {}

message IndexWork
{
  oneof task
  {
    Subscribed subscribed = 1;
    IndexKeyValue key_value = 2;
    Published work_done = 3;
  }
}
message IndexInstall
{
  string strategy_name = 1;
  string map_name = 2;
}

message IndexKey
{
  string strategy_name = 1;
  bytes key = 2;
}

message IndexValue { bytes value = 1; }